# Cypescript

./: .gitignore  ADVANCED_OPTIMIZATION_RESULTS.md  CHAT_SUMMARY.md  CMakeLists.txt  CUSTOM_CPP_INTEGRATION.md  DEVELOPMENT_ROADMAP.md  DOCS_ENHANCEMENTS.md  DOCUMENTATION.md  DOCUMENTATION_REVIEW.md  EXAMPLE_STATUS.md  FUNCTIONS_IMPLEMENTATION.md  MEMORY_OPTIMIZATION_RESULTS.md  MULTI_LANGUAGE_BENCHMARK_RESULTS.md  NEON_OPTIMIZATION_RESULTS.md  OPTIMIZATION_VALIDATION_RESULTS.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_SUMMARY.md  QUICK_REFERENCE.md  README.md  advanced_opt  all_loops  all_loops_program  arithmetic_program  arithmetic_test  array_assignment_test  array_length_test  arrays_comprehensive  arrays_final  arrays_simple  arrays_string  arrays_test  basic_opt  benchmark_all_languages.sh  benchmark_simple.csc  benchmark_simple.ts  bfs  build.sh  compile-advanced.sh  compile-memory-optimized.sh  compile-optimized.sh  (+45 more)
benchmarks/: BENCHMARK_RESULTS.md  FINAL_BENCHMARK_REPORT.md  array_processing_benchmark.csc  array_processing_benchmark.js  array_processing_benchmark.py  array_processing_benchmark.ts  bench_fibonacci.csc  bench_fibonacci.ts  bench_matrix.csc  bench_matrix.ts  bench_primes.csc  bench_primes.ts  benchmark_bfs.csc  benchmark_bfs.ts  benchmark_simple.csc  benchmark_simple.ts  cpp_integration_benchmark.csc  intensive_benchmark.csc  intensive_benchmark.js  intensive_benchmark.py  large_array_neon_test.csc  large_scale_simd_benchmark.csc  memory_optimization_benchmark.csc  neon_benchmark.csc  pgo_validation_benchmark.csc  run_benchmarks.sh  simd_benchmark.csc
docs/: README.md  cypescript-interpreter.js  index.html  script.js  serve.py  styles.css
example/: README.md  all_loops.csc  arithmetic.csc  array_length_test.csc  array_push_test.csc  arrays_comprehensive.csc  arrays_final_test.csc  arrays_string_test.csc  arrays_test.csc  bfs.csc  bfs.ts  bfs_final_test.csc  complex.csc  complex_native_compatible.csc  complex_native_simple.csc  complex_object_benchmark.csc  comprehensive.csc  comprehensive_native_test.csc  const_test.csc  control_flow.csc  cpp_integration_basic.csc  for_of_test.csc  functions_demo.csc  hello.csc  json_parse_test.csc  json_test.csc  logic_test.csc  loop_edge_cases.csc  map_set_test.csc  mega_complex_benchmark.csc  nested_test.csc  phase1_optimization_test.csc  print_vs_println.csc  property_test.csc  simple_object_test.csc  string_array_comprehensive.csc  string_array_debug.csc  test_fixes.csc  typescript_objects_native.csc
example/basic/: README.md  arithmetic.csc  array_assignment_test.csc  arrays_simple_test.csc  string_array_comprehensive.csc  string_array_simple.csc  while_loop.csc
example/browser-only/: README.md  complex_data_structures.csc  functions_preview.csc  game_system.csc
example/cpp-integration/: README.md  cpp_integration_simple.csc  cpp_integration_test.csc  custom_math_demo.csc
src/: AST.h  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  ObjectOptimizer.cpp  ObjectOptimizer.h  Parser.cpp  Parser.h  Token.h  custom_math_lib.cpp  cypescript_stdlib.cpp  main.cpp  memory_optimized_lib.cpp  neon_optimized_lib.cpp  simd_optimized_lib.cpp
tests/: run_tests.sh  test_arithmetic.csc  test_arrays.csc  test_do_while.csc  test_for.csc  test_functions.csc  test_if_else.csc  test_objects.csc  test_variables.csc  test_while.csc
vscode-extension/: CHANGELOG.md  QUICKSTART.md  README.md  cypescript-1.0.0.vsix  install.sh  language-configuration.json  package-lock.json  package.json
vscode-extension/snippets/: cypescript.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: cypescript.tmLanguage.json
